<resources>
    <string name="app_name">Krasnoyarsk_Region_Forest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Энциклопедия леса</string>
    <string name="nav_header_subtitle">Красноярский край</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="derevo">Деревья</string>
    <string name="rastenia">Растения</string>
    <string name="park">Парки и заповедники</string>
    <string name="uch">Ученые</string>
    <string name="derevo_1">Сосна́ (лат. Pínus) — типовой род хвойных деревьев, кустарников или стлаников семейства Сосновые (Pinaceae).
Сосны — растения со строго мутовчатым ветвлением и побегами двух типов — удлинёнными и укороченными. Хвоя располагается только на укороченных побегах. По числу хвоинок на укороченном побеге сосны делятся на двухвойные, трёххвойные и пятихвойные.
По современным данным, существует около 130 видов[2] сосны, которые в естественном произрастании рассеяны по всему Северному полушарию от экватора до заполярья. В умеренном и субарктическом климате они образуют леса как на равнинах, так и в горах, а в субтропиках, тропиках и вблизи экватора произрастают преимущественно в горах, хотя растут и на равнинах, как, например, сосна карибская. Побеги у сосны, как и у кедров, лиственниц, лжелиственниц, двух типов: длинные и укороченные. Листья на длинных побегах бурые и чешуйчатые. Листья на укороченных побегах 5—9 см длиной, игольчатые, сидят пучками по 2—5 штук и окружены у основания плёнчатыми влагалищами. Соответственно количеству листьев в пучке виды сосен называются двухвойными, трёххвойными и пятихвойными. Так, сосна обыкновенная (Pinus sylvestris) и сосна приморская (Pinus pinaster) — двухвойные, сосна сибирская (Pinus sibirica) и японская белая сосна (Pinus parviflora) — пятихвойные, сосна Бунге (Pinus bungeana) — трёххвойная[3]. Листья сохраняются на побегах в течение нескольких лет. Иногда, чаще всего в результате повреждений, наносимых насекомыми, на сосне развиваются розеточные побеги. Такие побеги чрезвычайно коротки и имеют пучки коротких и широких игл.Мужские стробилы собраны колосом у основания молодых веточек. Пыльцевые мешочки раскрываются продольной трещиной. Женские стробилы в шишках, расположенных в верхней части дерева. Шишки яйцевидные или продолговатые, обыкновенно поникшие, а при зрелости опадающие целиком. Они состоят из черепитчато-сложенных плодовых чешуй, деревянистых или кожистых, утолщённых на конце в виде гранёного щитика. Эти чешуи сначала плотно сомкнуты, при полной же зрелости расходятся, обнажая семена, которые находятся по 2 против каждой чешуи. Семена большей частью крылатые, реже без крыла, с твёрдой оболочкой в виде орешка. В зародыше может быть от 4 до 15 семядолей.</string>
    <string name="Nazderevo1">Сосна обыкновенная</string>
    <string name="Otdelderevo1">Отдел: Хвойные</string>
    <string name="Nazseme1">Семейство: Сосновые</string>
    <string name="derevo_2">Лиственница сибирская произрастает в лесной, лесотундровой, тундровой (южная часть), лесостепной зонах[2][3][4][5][6]. Иногда проникает в степную зону и даже в зону полупустынь[7]. Область естественного распространения охватывает север, северо-восток и частично восток Европейской части России, Урал, Западную и Восточную Сибирь, за пределами России — Восточный Казахстан, северную часть Монголии и Северо-Западный Китай (Синьцзян-Уйгурский автономный район). С севера на юг сплошной ареал простирается от тундры (71° с. ш.) до Алтая и Саян (примерно до 45° 40 с. ш. на Монгольском Алтае и Хангае). Оторванный от сплошного ареала остров распространения лиственницы есть на хребтах Саур и Тарбагатай</string>
    <string name="Nazderevo2">Лиственница</string>
    <string name="Otdelderevo2">Отдел: Хвойные</string>
    <string name="Nazseme2">Семейство: Сосновые</string>
    <string name="derevo_3">Берёза (лат. Bétula) — род листопадных деревьев и кустарников семейства Берёзовые (Betulaceae). Берёза широко распространена в Северном полушарии; на территории России принадлежит к числу наиболее распространённых древесных пород. Общее число видов — около ста[3] или немного больше[4]. Многие виды берёзы — широко распространённые и важнейшие лесообразующие породы, в значительной мере определяющие облик и видовой состав лиственных и хвойно-лиственных (смешанных) лесов в умеренной и холодной части Евразии и Северной Америки.</string>
    <string name="Nazderevo3">Береза </string>
    <string name="Otdelderevo3">Отдел: Цветковые</string>
    <string name="Nazseme3">Семейство: Березовые</string>
    <string name="derevo_4">Клён остроли́стный, или Клён платанови́дный, или Клён платаноли́стный (лат. Ácer platanoídes) — широко распространённое в Европе и Юго-Западной Азии древесное растение, вид рода Клён (Acer) семейства Сапиндовые (Sapindaceae) (ранее этот род относили к семейству Клёновые). Обыкновенное растение во всех областях Средней России.Часто культивируется в качестве декоративных насаждений в садах и вдоль дорог.Ботаники и фенологи считают начало сокодвижения у клёна остролистного наступлением весны в растительном мире</string>
    <string name="Nazderevo4">Клен </string>
    <string name="Otdelderevo4">Отдел: Цветковые</string>
    <string name="Nazseme4">Семейство: Сапиндовые</string>
    <string name="derevo_5">Ель - Вечнозелёное древесное растение высотой до 30 м[2] (изредка до 50 м). Крона в виде конуса, образуется поникающими или распростёртыми ветвями, расположенными мутовчато.Корневая система поверхностная, из-за этого растения нередко подвергаются ветровалам[2].Кора серого цвета, отслаивающаяся тонкими пластинками.Четырёхгранные хвоинки (листья), расположенные по спирали, сидят по одной на листовых подушечках. Длина хвоинок — от 1 до 2,5 см. Продолжительность жизни каждой хвоинки — шесть и более лет.Микростробилы (мужские колоски) пазушные, образуются на концах побегов прошлого года, у основания окружены чешуйками. Пыление происходит в мае[2]. Мегастробилы (женские шишки) появляются на концах двулетних ветвей. Сначала они растут вертикально, затем постепенно поворачиваются верхушкой вниз и становятся повислыми; созревают осенью (в Европейской части России — в октябре). Зрелые шишки продолговатые — до 15 см длиной и 4 см шириной. Семена яйцевидно-заострённые, до 4 мм длиной; крыло красновато-коричневое. Семена до середины зимы продолжают оставаться в шишках, высыпаются в январе-марте[2], рассеиваясь по насту.</string>
    <string name="Nazderevo5">Ель </string>
    <string name="Otdelderevo5">Отдел: Хвойные</string>
    <string name="Nazseme5">Семейство: Сосновые</string>
    <string name="derevo_6">То́поль (лат. Pópulus) — род двудомных (редко однодомных)[4] листопадных быстрорастущих деревьев семейства Ивовые (Salicaceae).Лес с преобладанием тополей называют тополёвником.рупные деревья высотой 40—45 м (до 60 м) и диаметром ствола более 1 метра. Крона шатровидная, яйцевидная, яйцевидно-пирамидальная или пирамидальная. Кора ствола трещиноватая, буровато-серая или тёмно-серая; ветвей — гладкая, серая или оливково-серая.Корневая система сильная, но большей частью поверхностная, уходящая далеко за пределы проекции кроны.Листья черешковые, очерёдные, голые или опушенные, от ланцетных до широкояйцевидных, форма листа зависит от побега, на котором находится, и от положения на этом побеге, жилкование сетчатое.</string>
    <string name="Nazderevo6">Тополь </string>
    <string name="Otdelderevo6">Отдел: Цветковые</string>
    <string name="Nazseme6">Семейство: Ивовые</string>
    <string name="derevo_7">И́ва (лат. Sálix) — род древесных растений семейства Ивовые (Salicaceae).В русском языке по отношению к видам ивы используется также много других названий — ветла́, раки́та, лоза́, лози́на, ве́рба, тальник[3].Очень распространённые в средней части России растения. Большинство видов ив любят влажность и селятся в сырых местах, в сухих же местах (на склонах, песках и т. п.) и на болотах растут сравнительно немногие виды. Встречается ива и в лесах, как подмесь к другим деревьям.Внешний вид ив весьма разнообразен: среди них есть высокие деревья (Salix alba, Salix fragilis, Salix caprea) и кустарники (Salix viminalis, Salix daphnoides, Salix purpurea), иногда довольно мелкие, приземистые, стелющиеся по земле (Salix lapponica , Salix repens var. rosmarinifolia, Salix myrtilloides); в полярных же странах и на высоких горах, в нагорных областях, растут ещё более мелкие ивы-карлики, такие как (Salix herbacea, Salix reticulata), весьма мелкие кустарнички, не выше 2,5 сантиметров, и не превышающие мхов, среди которых они растут.</string>
    <string name="Nazderevo7">Ива </string>
    <string name="Otdelderevo7">Отдел: Цветковые</string>
    <string name="Nazseme7">Семейство: Ивовые</string>
    <string name="derevo_8">Ли́па (лат. Tília) — род древесных растений. Объединяет около сорока пяти[3] видов деревьев и крупных кустарников, а также свыше сотни гибридогенных видов. Со времён Карла Линнея было описано свыше 350 видов[4], большинство которых позднее были сведены в синонимы ныне существующих таксонов.По классической системе классификации Кронквиста род входит в семейство Липовые (Tiliaceae), но по результатам современных генетических исследований данное семейство в системе классификации APG II включили в ранге подсемейства в семейство Мальвовые (Malvaceae).</string>
    <string name="Nazderevo8">Липа </string>
    <string name="Otdelderevo8">Отдел: Цветковые</string>
    <string name="Nazseme8">Семейство: Мальвовые</string>
    <string name="rast_1">Одуванчик - Одуванчик лекарственный — одно из самых распространённых растений, особенно в лесостепной зоне. Растёт на лугах, полянах, около дорог, на выгонах и у жилья, часто как сорняк в полях, садах, огородах и парках в европейской части России, на Украине, в Белоруссии, на Кавказе, в Молдавии, Приднестровье в Средней Азии, Сибири, на Дальнем Востоке, на Сахалине, Камчатке. </string>
    <string name="rast1">Одуванчик</string>
    <string name="Otdelrast1">Отдел: Цветковые</string>
    <string name="Nazsemerast1">Класс: Двудольные</string>
    <string name="rast_2">Пижма - род многолетних травянистых растений и кустарничков семейства Астровые, или Сложноцветные (Asteraceae), произрастающих, главным образом, в умеренных климатических зонах Северного полушария. Род включает не менее 167[3] видов, на территории России из них произрастает около 30.</string>
    <string name="rast2">Пижма</string>
    <string name="Otdelrast2">Отдел: Цветковые</string>
    <string name="Nazsemerast2">Класс: Двудольные</string>
    <string name="park_1">Ергаки - природный парк краевого значения, расположенный на юге Красноярского края. Как особо охраняемая природная территория природный парк был организован 4 апреля 2005 г. Площадь — 342 873 га. Туристский центр хребта Ергаки в Западном Саяне. Расположен в истоках рек Большой Кебеж, Большой Ключ, Тайгиш, Верхняя Буйба, Средняя Буйба и Нижняя Буйба. Входит в состав ассоциации заповедников и национальных парков Алтай-Саянского экорегиона.</string>
    <string name="park1">Ергаки</string>
    <string name="ploshad_array1">Площадь: 342.873 га</string>
    <string name="data_array1">Дата основания: 4 апреля 2005 года</string>
    <string name="text_bottom">Войдите в свою учетную запись</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="text_logo">Энциклопедия Красноярского края</string>
</resources>