<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toRightOf="parent"
    app:layout_insetEdge="top">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/Green"
                android:orientation="vertical"
                android:rotationY="0">

                <TextView
                    android:id="@+id/Nazderevo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:background="@color/colornazvanie"
                    android:text="@string/Nazderevo1" />

                <TextView
                    android:id="@+id/Otdelderevo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:background="@color/colorotdel"
                    android:text="@string/Otdelderevo1" />


                <TextView
                    android:id="@+id/Nazseme1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:background="@color/colorseme"
                    android:text="@string/Nazseme1" />

                <ImageView
                    android:id="@+id/imageContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="#FFFFFF"
                    android:scaleX="2"
                    android:src="@drawable/sosna" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/derevo_1" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>